--- a/composer.json
+++ b/composer.json
@@ -1,44 +1,47 @@
 {
-	"type" : "wordpress-plugin",
-	"name" : "docalist/docalist-batch",
-	"description" : "Traitements par lot sur des notices Docalist.",
-	"homepage" : "https://docalist.org/",
-	"license" : "GPL-2.0-or-later",
-	"authors" : [{
-			"name" : "Daniel Menard",
-			"email" : "daniel.menard@laposte.net",
-			"homepage" : "https://docalist.org/"
-		}
-	],
-	"keywords" : [
-		"docalist"
-	],
-	"support" : {
-		"issues" : "https://github.com/docalist/docalist/issues",
-		"forum" : "https://groups.google.com/forum/#!forum/docalist-discuss"
-	},
-	"require" : {
-		"composer/installers" : "~1.0",
-		"php" : ">=7.2"
-	},
-	"autoload" : {
-		"psr-4" : {
-			"Docalist\\Batch\\" : "class"
-		}
-	},
-	"autoload-dev" : {
-		"psr-4" : {
-			"Docalist\\Batch\\Tests\\" : "tests"
-		}
-	},
-	"config" : {
+    "type" : "wordpress-plugin",
+    "name" : "docalist/docalist-batch",
+    "description" : "Traitements par lot sur des notices Docalist.",
+    "homepage" : "https://docalist.org/",
+    "license" : "GPL-2.0-or-later",
+    "authors" : [{
+            "name" : "Daniel Menard",
+            "email" : "daniel.menard@laposte.net",
+            "homepage" : "https://docalist.org/"
+        }
+    ],
+    "keywords" : [
+        "docalist"
+    ],
+    "support" : {
+        "issues" : "https://github.com/docalist/docalist/issues",
+        "forum" : "https://groups.google.com/forum/#!forum/docalist-discuss"
+    },
+    "require" : {
+        "php" : ">=7.2",
+        "composer/installers" : "~1.0",
+        "docalist/docalist-core": "^3.4.0",
+        "docalist/docalist-search": "^4.2.0",
+        "docalist/docalist-data": "^4.2.0"
+    },
+    "autoload" : {
+        "psr-4" : {
+            "Docalist\\Batch\\" : "class"
+        }
+    },
+    "autoload-dev" : {
+        "psr-4" : {
+            "Docalist\\Batch\\Tests\\" : "tests"
+        }
+    },
+    "config" : {
         "sort-packages" : true,
-		"optimize-autoloader" : true,
-		"classmap-authoritative" : true
-	},
-	"extra" : {
-		"branch-alias" : {
-			"dev-master" : "1.2-dev"
-		}
-	}
+        "optimize-autoloader" : true,
+        "classmap-authoritative" : true
+    },
+    "extra" : {
+        "branch-alias" : {
+            "dev-master" : "1.2-dev"
+        }
+    }
 }
